# SegmentationBasedCellClassification

./: .gitignore  README.md  Untitled.ipynb  evaluate.py  pyproject.toml  stats.ipynb  test.ipynb  test.py  test2.ipynb  train_classifier.py  train_segmentation.py  utils.py
checkpoints/: classification_checkpoint.pth
data/: __init__.py  prepare_data.py  utils.py
data/raw/labels/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  (+210 more)
models/: __init__.py  cell_classifier.py  nucleus_segmenter.py
