[project]
name = "segmentationbasedcellclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.5",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
